--- a/wallet_server/templates/index.html
+++ b/wallet_server/templates/index.html
@@ -20,6 +20,37 @@
                     console.error(error);
                 }
             })
+
+            $('#send_money_button').click(function () {
+                let confirm_text = 'Are you sure to send?';
+                let confirm_result = confirm(confirm_text);
+                if (confirm_result !== true) {
+                    alert('Canceled');
+                    return;
+                }
+                let transaction_data = {
+                    'sender_private_key': $('#private_key').val(),
+                    'sender_blockchain_address': $('#blockchain_address').val(),
+                    'recipient_blockchain_address': $('#recipient_blockchain_address').val(),
+                    'sender_public_key': $('#public_key').val(),
+                    'value': $('#send_amount').val(),
+                };
+
+                $.ajax({
+                    url: '/transaction',
+                    type: 'POST',
+                    contentType: 'application/json',
+                    data: JSON.stringify(transaction_data),
+                    success: function (response) {
+                        console.info(response);
+                        alert('Send success');
+                    },
+                    error: function (response) {
+                        console.error(response);
+                        alert('Send failed');
+                    }
+                })
+            })
         })
 
     </script>
