--- a/wallet_server/templates/index.html
+++ b/wallet_server/templates/index.html
@@ -43,14 +43,19 @@
                     data: JSON.stringify(transaction_data),
                     success: function (response) {
                         console.info(response);
-                        alert('Send success');
+                        if (response.message == 'fail') {
+                            alert('Send fail');
+                        } else {
+                            alert('Send success');
+                        }
                     },
                     error: function (response) {
                         console.error(response);
                         alert('Send failed');
                     }
                 })
-            })
+            });
+            
             function reload_amount() {
                 let data = {
                     'blockchain_address': $('#blockchain_address').val()
@@ -64,14 +69,13 @@
                         $('#wallet_amount').text(amount);
                         console.info(amount);
                     },
-                    error: function(error) {
+                    error: function (error) {
                         console.error(error)
                     }
                 })
             }
-            $('#reload_wallet').click(function(){
-                reload_amount();
-            });
+
+            setInterval(reload_amount, 3000)
         })
 
     </script>
@@ -82,7 +86,7 @@
     <div>
         <h1>Wallet</h1>
         <div id="wallet_amount">0</div>
-        <button id="reload_wallet">Reload Wallet</button>
+
 
         <p>Public Key</p>
         <textarea id="public_key" rows="2" cols="100"></textarea>
